# pluma-plugins

debian/: changelog  control  pluma-plugins.install  rules
plugins/drawspaces/: Makefile.am  drawspaces.pluma-plugin.desktop.in.in  pluma-drawspaces-plugin.c  pluma-drawspaces-plugin.h
